@@ -147,4 +147,8 @@ VERSION 0.3.0
  ________________________________________________________________________________
 VERSION 0.3.1
 
+  * NEW FEATURE: You can now add new groups
+  * NEW FEATURE: Users of the Nokia 6230 can now set the connection delay in the network menu
   * Bugfix: Time display on message timestamp was not correct
+  * Bugfix: If you try to add a contact and there are no groups you can make a new one
+  * Added Bulgarian translation
